@@ -1,6 +1,6 @@
 Package: Gmisc
 Version: 1.0.0
-Date: 2014-08-19
+Date: 2014-10-18
 Title: Collection of functions for plotting relations, generating tables, and
     more.
 Author: Max Gordon <max@gforge.se>
