@@ -1,7 +1,7 @@
 library('testthat')
 library('Gmisc')
 
-test_check('Gmisc')
+test_package('Gmisc')
 ## To run the tests manually
 if (FALSE){
   my_test_dir <- gsub("Gmisc.*", "Gmisc/tests/testthat", getwd())
